# html-slides-studio

./: .env.example  .gitignore  ANIMATION_DESIGN.md  ANIMATION_SKILL.md  DESIGN.md  ROADMAP.md  index.html  package-lock.json  package.json  test-export.mjs  vite.config.ts
docs/: ERROR_LIBRARY.md  FINAL_WORK_CHECKLIST.md  WORK_PRINCIPLES.md
docs/superpowers/plans/: 2026-05-29-mvp-implementation.md
server/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/Editor/: AnimationEditor.tsx  OutlineEditor.tsx  TemplateSelect.tsx  TopicInput.tsx
src/components/Layout/: MainLayout.tsx
src/components/Preview/: PresentationMode.tsx  SlidePreview.tsx
src/pages/: CreatePage.tsx  HomePage.tsx  PresentationPage.tsx
src/services/: ai.ts  animationEngine.ts  templates.ts
src/stores/: editorStore.ts  projectStore.ts
src/styles/: index.css
src/types/: index.ts
